--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "name": "licitacoes-publicas-pme",
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
